--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="wrapper">
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+  </div>
 </body>
 </html>
