--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <div class="wrapper">
+    <section class="instructions">
+      use the arrow keys to move
+    </section>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
