Add headedr bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
   <div class="wrapper">
+    <header class="status-bar">
+      <section class="stats">
+        <span id="wins">Wins: 0</span><br>
+      </section>
+      <section class="controls">
+        <button class="button" id="button-music-toggle">Music</button>
+      </section>
+    </header>
     <section class="instructions">
       use the arrow keys to move
     </section>
