Track game wins

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <header class="status-bar">
       <section class="stats">
-        <span id="wins">Wins: 0</span><br>
+        Wins: <span id="wins">0</span><br>
       </section>
       <section class="controls">
         <button class="button" id="button-music-toggle">Music</button>
