--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       </section>
     </header>
     <section class="instructions">
-      use the arrow keys to move
+      <p>= use the arrow keys to move =</p>
+      <p>If you touch a bug you lose, but if you reach the water you win!</p>
     </section>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
