Use an icon for background music
Icons from https://icons8.com/icons.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Wins: <span id="wins">0</span><br>
       </section>
       <section class="controls">
-        <button class="button" id="button-music-toggle">Music</button>
+        <img id="button-music-toggle" src="./images/icons8-no-audio-32.png" alt="music off" />
       </section>
     </header>
     <section class="instructions">
