Refactor: points instead of wins

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <header class="status-bar">
       <section class="stats">
-        Wins: <span id="wins">0</span><br>
+        Points: <span id="points">0</span><br>
       </section>
       <section class="controls">
         <img id="button-music-toggle" src="./images/icons8-no-audio-32.png" alt="music off" />
@@ -17,7 +17,7 @@
     </header>
     <section class="instructions">
       <p>= use the arrow keys to move =</p>
-      <p>If you touch a bug you lose, but if you reach the water you win!</p>
+      <p>If you touch a bug you lose, but if you reach the water you get a point!</p>
     </section>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
